# RunMcShooty

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Game.cpp  Game.h  collision_box.cpp  collision_box.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  math.h  movable_entity.cpp  movable_entity.h  weapon.h  world.cpp  world.h
src/entities/: CMakeLists.txt  Entitiy.cpp  Entitiy.h  SceneNode.cpp  SceneNode.h  SpriteNode.cpp  SpriteNode.h  animator.h  controller.h  entity.cpp  entity.h  movable_entity.cpp  movable_entity.h  no_controller.h  player.cpp  player.h  player_controller.h  random_controller.h  sprite.cpp  sprite.h  static_entity.cpp  static_entity.h  trajectory_controller.h
src/events/: CMakeLists.txt  event.h
src/graphic/: CMakeLists.txt  animation_controller.h  sprite.cpp  sprite.h
src/managers/: CMakeLists.txt  ResourceManager.h  texture_manager.cpp  texture_manager.h
src/utils/: CMakeLists.txt  camera.h  collision_box.cpp  collision_box.h  collision_data.h  file.h  math.h  restricted_queue.h  timer.h
